--- a/config/boards/shields/Test/roBa_L.conf
+++ b/config/boards/shields/Test/roBa_L.conf
@@ -1,1 +1,18 @@
-west build -p -b nice_nano_v2 -- -DSHIELD=roBa_L -DSPLIT_ROLE=central
+CONFIG_ZMK_KEYBOARD_NAME="roBa"
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_MOUSE=y
+CONFIG_ZMK_BLE=y
+CONFIG_NFCT_PINS_AS_GPIOS=y
+
+# エンコーダー設定
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# バッテリーレポート設定
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+# ZMK Studio対応
+CONFIG_ZMK_STUDIO=y
