--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -1,1 +1,28 @@
-west build -p -b nice_nano_v2 -- -DSHIELD=roBa_R -DSPLIT_ROLE=central
+# 親機設定を無効化（子機にする）
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+CONFIG_ZMK_KEYBOARD_NAME="roBa_Right"
+CONFIG_ZMK_MOUSE=n
+
+# トラックボール(PMW3610)設定（センサーは右手にあるため必須）
+CONFIG_SPI=y
+CONFIG_INPUT=y
+CONFIG_PMW3610=y
+CONFIG_PMW3610_CPI=400
+CONFIG_PMW3610_CPI_DIVIDOR=1
+CONFIG_PMW3610_ORIENTATION_180=y
+CONFIG_PMW3610_SCROLL_TICK=16
+CONFIG_PMW3610_INVERT_X=n
+CONFIG_PMW3610_INVERT_SCROLL_X=y
+CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=3264
+CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=20
+CONFIG_PMW3610_POLLING_RATE_125_SW=y
+CONFIG_PMW3610_AUTOMOUSE_TIMEOUT_MS=700
+CONFIG_PMW3610_MOVEMENT_THRESHOLD=0
+CONFIG_PMW3610_SMART_ALGORITHM=y
+
+# その他設定
+CONFIG_NFCT_PINS_AS_GPIOS=y
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_STUDIO=y
