--- a/config/boards/shields/roBa/roBa.dtsi
+++ b/config/boards/shields/roBa/roBa.dtsi
@@ -8,28 +8,32 @@
 
     default_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
-        columns = <10>;
-        rows = <5>;
+        columns = <6>;
+        rows = <4>;
+        // 左手側の物理配置に合わせたマップ（仮定）
         map = <
-RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4)    RC(0,5) RC(0,6) RC(0,7) RC(0,8) RC(0,9)
-RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4)    RC(1,5) RC(1,6) RC(1,7) RC(1,8) RC(1,9)
-RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4)    RC(2,5) RC(2,6) RC(2,7) RC(2,8) RC(2,9)
-RC(3,0) RC(3,1) RC(3,2)                    RC(3,7) RC(3,8) RC(3,9)
-RC(4,0) RC(4,1) RC(4,2)                    RC(4,7) RC(4,8) RC(4,9)
+RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)
+RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)
+RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)
+RC(3,0) RC(3,1) RC(3,2)
         >;
     };
 
     kscan0: kscan_0 {
         compatible = "zmk,kscan-gpio-matrix";
-        diode-direction = "row2col";
-        wakeup-source;
+        label = "KSCAN";
+        
+        // ★ここを入れ替えて試してください（row2col か col2row）
+        diode-direction = "row2col"; 
 
+        // 左手用XIAOのピン配置（roBa仕様）
         col-gpios
             = <&xiao_d 4 GPIO_ACTIVE_HIGH>
             , <&xiao_d 5 GPIO_ACTIVE_HIGH>
             , <&xiao_d 10 GPIO_ACTIVE_HIGH>
             , <&xiao_d 9 GPIO_ACTIVE_HIGH>
             , <&xiao_d 8 GPIO_ACTIVE_HIGH>
+            , <&xiao_d 7 GPIO_ACTIVE_HIGH> 
             ;
 
         row-gpios
@@ -37,7 +41,6 @@ RC(4,0) RC(4,1) RC(4,2)                    RC(4,7) RC(4,8) RC(4,9)
             , <&xiao_d 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             , <&xiao_d 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             , <&xiao_d 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&xiao_d 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             ;
     };
 };
