--- a/config/boards/shields/roBa/roBa.dtsi
+++ b/config/boards/shields/roBa/roBa.dtsi
@@ -10,7 +10,6 @@
         compatible = "zmk,matrix-transform";
         columns = <6>;
         rows = <4>;
-        // roBa本来の4行6列マップ
         map = <
 RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)    RC(0,5) RC(0,4) RC(0,3) RC(0,2) RC(0,1) RC(0,0)
 RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)    RC(1,5) RC(1,4) RC(1,3) RC(1,2) RC(1,1) RC(1,0)
@@ -23,10 +22,11 @@ RC(3,0) RC(3,1) RC(3,2)                            RC(3,2) RC(3,1) RC(3,0)
         compatible = "zmk,kscan-gpio-matrix";
         wakeup-source;
         
-        // ★ここを変更しました：col2row -> row2col
-        diode-direction = "row2col";
+        // ★ここを戻しました：row2col -> col2row
+        // roBaの物理的な回路はこっちが正解の可能性が高いです
+        diode-direction = "col2row";
 
-        // ★列ピン（6本に修正）
+        // ピン配置（6本）
         col-gpios
             = <&xiao_d 4 GPIO_ACTIVE_HIGH>
             , <&xiao_d 5 GPIO_ACTIVE_HIGH>
@@ -36,7 +36,7 @@ RC(3,0) RC(3,1) RC(3,2)                            RC(3,2) RC(3,1) RC(3,0)
             , <&xiao_d 7 GPIO_ACTIVE_HIGH>
             ;
 
-        // ★行ピン（4本に修正）
+        // 行ピン（4本）
         row-gpios
             = <&xiao_d 0 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             , <&xiao_d 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
