--- a/config/boards/shields/roBa/roBa.dtsi
+++ b/config/boards/shields/roBa/roBa.dtsi
@@ -10,6 +10,8 @@
         compatible = "zmk,matrix-transform";
         columns = <6>;
         rows = <4>;
+        
+        // 左手デバイス用のマップ（キーが逆ならピン順序で直します）
         map = <
 RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)    RC(0,5) RC(0,4) RC(0,3) RC(0,2) RC(0,1) RC(0,0)
 RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)    RC(1,5) RC(1,4) RC(1,3) RC(1,2) RC(1,1) RC(1,0)
@@ -22,8 +24,7 @@ RC(3,0) RC(3,1) RC(3,2)                            RC(3,2) RC(3,1) RC(3,0)
         compatible = "zmk,kscan-gpio-matrix";
         wakeup-source;
         
-        // ★ここを戻しました：row2col -> col2row
-        // roBaの物理的な回路はこっちが正解の可能性が高いです
+        // ★ここを戻しました！これがroBaの正解です
         diode-direction = "col2row";
 
         // ピン配置（6本）
