--- a/config/boards/shields/roBa/roBa.dtsi
+++ b/config/boards/shields/roBa/roBa.dtsi
@@ -10,12 +10,13 @@
         compatible = "zmk,matrix-transform";
         columns = <5>;
         rows = <5>;
+        // Aを押してGが出るなら、マップ側で最初から逆にしておきます
         map = <
-RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4)    RC(0,4) RC(0,3) RC(0,2) RC(0,1) RC(0,0)
-RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4)    RC(1,4) RC(1,3) RC(1,2) RC(1,1) RC(1,0)
-RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4)    RC(2,4) RC(2,3) RC(2,2) RC(2,1) RC(2,0)
-RC(3,0) RC(3,1) RC(3,2)                    RC(3,2) RC(3,1) RC(3,0)
-RC(4,0) RC(4,1) RC(4,2)                    RC(4,2) RC(4,1) RC(4,0)
+RC(0,4) RC(0,3) RC(0,2) RC(0,1) RC(0,0)    RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4)
+RC(1,4) RC(1,3) RC(1,2) RC(1,1) RC(1,0)    RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4)
+RC(2,4) RC(2,3) RC(2,2) RC(2,1) RC(2,0)    RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4)
+RC(3,2) RC(3,1) RC(3,0)                    RC(3,0) RC(3,1) RC(3,2)
+RC(4,2) RC(4,1) RC(4,0)                    RC(4,0) RC(4,1) RC(4,2)
         >;
     };
 
@@ -23,19 +24,19 @@ RC(4,0) RC(4,1) RC(4,2)                    RC(4,2) RC(4,1) RC(4,0)
         compatible = "zmk,kscan-gpio-matrix";
         wakeup-source;
         
-        // ★今回は row2col で試します（連打防止）
-        diode-direction = "row2col";
+        // ★これが「入力はされるが逆になる」設定です（一番安定）
+        diode-direction = "col2row";
 
-        // ★ピン配置：5本・逆順 (D8が先頭)
+        // ピン配置（連打されない順序）
         col-gpios
-            = <&xiao_d 8 GPIO_ACTIVE_HIGH>
-            , <&xiao_d 9 GPIO_ACTIVE_HIGH>
-            , <&xiao_d 10 GPIO_ACTIVE_HIGH>
+            = <&xiao_d 4 GPIO_ACTIVE_HIGH>
             , <&xiao_d 5 GPIO_ACTIVE_HIGH>
-            , <&xiao_d 4 GPIO_ACTIVE_HIGH>
+            , <&xiao_d 10 GPIO_ACTIVE_HIGH>
+            , <&xiao_d 9 GPIO_ACTIVE_HIGH>
+            , <&xiao_d 8 GPIO_ACTIVE_HIGH>
             ;
 
-        // ★行ピン：5本 (D6を追加)
+        // 行ピン
         row-gpios
             = <&xiao_d 0 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             , <&xiao_d 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
