--- a/config/boards/shields/roBa/roBa.dtsi
+++ b/config/boards/shields/roBa/roBa.dtsi
@@ -10,7 +10,7 @@
         compatible = "zmk,matrix-transform";
         columns = <5>;
         rows = <5>;
-        // Aを押してGが出るなら、マップ側で最初から逆にしておきます
+        // Aの位置にGが出るのを防ぐため、マップを最初から反転させておきました
         map = <
 RC(0,4) RC(0,3) RC(0,2) RC(0,1) RC(0,0)    RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4)
 RC(1,4) RC(1,3) RC(1,2) RC(1,1) RC(1,0)    RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4)
@@ -24,10 +24,10 @@ RC(4,2) RC(4,1) RC(4,0)                    RC(4,0) RC(4,1) RC(4,2)
         compatible = "zmk,kscan-gpio-matrix";
         wakeup-source;
         
-        // ★これが「入力はされるが逆になる」設定です（一番安定）
+        // ★以前反応があった設定に戻しました
         diode-direction = "col2row";
 
-        // ピン配置（連打されない順序）
+        // ピン配置（XIAO BLEの全ピンを使用）
         col-gpios
             = <&xiao_d 4 GPIO_ACTIVE_HIGH>
             , <&xiao_d 5 GPIO_ACTIVE_HIGH>
@@ -36,7 +36,6 @@ RC(4,2) RC(4,1) RC(4,0)                    RC(4,0) RC(4,1) RC(4,2)
             , <&xiao_d 8 GPIO_ACTIVE_HIGH>
             ;
 
-        // 行ピン
         row-gpios
             = <&xiao_d 0 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             , <&xiao_d 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
