--- a/config/boards/shields/roBa/roBa.dtsi
+++ b/config/boards/shields/roBa/roBa.dtsi
@@ -10,7 +10,8 @@
         compatible = "zmk,matrix-transform";
         columns = <5>;
         rows = <5>;
-        // Aの位置にGが出るのを防ぐため、マップを最初から反転させておきました
+        // 【重要】ここで最初から並び順を逆にしました（0,4 -> 0,0）
+        // これで「A」を押して「G」が出る現象を直します
         map = <
 RC(0,4) RC(0,3) RC(0,2) RC(0,1) RC(0,0)    RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4)
 RC(1,4) RC(1,3) RC(1,2) RC(1,1) RC(1,0)    RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4)
@@ -24,10 +25,10 @@ RC(4,2) RC(4,1) RC(4,0)                    RC(4,0) RC(4,1) RC(4,2)
         compatible = "zmk,kscan-gpio-matrix";
         wakeup-source;
         
-        // ★以前反応があった設定に戻しました
+        // ★以前「反応した」ときの設定に戻します
         diode-direction = "col2row";
 
-        // ピン配置（XIAO BLEの全ピンを使用）
+        // ★ピンの順番も「反応した」ときのもの（D4始まり）に戻します
         col-gpios
             = <&xiao_d 4 GPIO_ACTIVE_HIGH>
             , <&xiao_d 5 GPIO_ACTIVE_HIGH>
